@@ -88,16 +88,22 @@ fe_args (int argc, char *argv[])
 #ifdef HAVE_LIBGNOME_214
 	g_option_context_add_main_entries (context, entries, GETTEXT_PACKAGE);
 	gui.program = gnome_program_init (PACKAGE, VERSION,
-					  LIBGNOMEUI_MODULE, argc, argv,
-					  GNOME_PARAM_GOPTION_CONTEXT, context,
-					  GNOME_PARAM_HUMAN_READABLE_NAME, _("IRC Chat"),
-					  GNOME_PROGRAM_STANDARD_PROPERTIES,
-					  NULL);
+	                                  LIBGNOMEUI_MODULE, argc, argv,
+	                                  GNOME_PARAM_GOPTION_CONTEXT, context,
+	                                  GNOME_PARAM_HUMAN_READABLE_NAME, _("IRC Chat"),
+	                                  GNOME_PROGRAM_STANDARD_PROPERTIES,
+	                                  NULL);
 #else
 	g_option_context_add_main_entries (context, entries, GETTEXT_PACKAGE);
 	g_option_context_add_group (context, gtk_get_option_group (TRUE));
 	g_option_context_parse (context, &argc, &argv, &error);
 	g_option_context_free (context);
+
+	gui.program = gnome_program_init (PACKAGE, VERSION,
+	                                  LIBGNOMEUI_MODULE, argc, argv,
+	                                  GNOME_PARAM_HUMAN_READABLE_NAME, _("IRC Chat"),
+	                                  GNOME_PROGRAM_STANDARD_PROPERTIES,
+	                                  NULL);
 #endif
 
 	if (error) {
